src/styles/style.css
/* ---------------- header ---------------- */

header {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 16px 0;
    background-color: rgba(255, 255, 255, 0.4);
    backdrop-filter: blur(24px);

    position: fixed;
    z-index: 1;
}

.header-container {
    width: 128rem;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 32px;
}

.header-navigation {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 24px;
}

.divider {
    width: 1px;
    height: 24px;

    background: var(--Gray-200);
}

.navigation-actions {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
}

/* --------------- hero ---------------- */



.page-content {
    padding: 96px 0;
}

.page-content2 {
    max-width: 128rem;
    margin: 0 auto;
    padding: 96px 0
}

.page-content-bg {
    background-color: var(--Gray-50);
}

.hero-container {
    display: flex;
    justify-content: space-between;
    padding: 0 32px;
    gap: 48px;
}

.hero-content-column {
    display: flex;
    max-width: 768px;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    gap: 48px;
}

.column-hero-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 8px;
}

.column-hero-content .group {
    display: flex;
    align-items: center;
    gap: 8px;
}

.dot {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 24px;
    height: 24px;
}

.available-dot {
    width: 8px;
    height: 8px;

    border-radius: 20px;
    background: #10B981;
}

.hero-actions {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
}

.links {
    display: flex;
    align-items: center;
    gap: 4px;
    padding: 6px;
}

.linkedin-logo > img {
    width: 24px;
    height: 24px;

    color: var(--Gray-600);
}

.hero-img-column {
    display: flex;
    min-width: 384px;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;

    /*border: 1px solid red;*/
}

.hero-img-container {
    width: 320px;
    height: 360px;

    /*border: 1px solid blue;*/
}

.hero-img {
    width: 280px;
    height: 320px;
    box-shadow: 0 0 0 var(--Gray-200);
    border-radius: 4px;
    position: relative;
    left: 38px;
    top: 38px;

    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

.hero-container:hover {
    .hero-img {
        box-shadow: 30px 30px 5px var(--Gray-200);
        transform: translateX(-38px) translateY(-38px);
    }
}

.about-container {
    display: flex;
    padding: 0 32px;
    gap: 48px;
    flex-direction: column;
    align-items: center;
}

.about-content {
    display: flex;
    align-items: flex-start;
    gap: 48px;
    align-self: stretch;
    flex-wrap: wrap;
}

.about-img-wrapper {
    display: flex;
    min-width: 444px;
    flex: 1 0 0;
    justify-content: center;
    order: 2;
}

.about-img-container {
    width: 440px;
    height: 420px;
}

.about-text {
    display: flex;
    min-width: 444px;
    flex-direction: column;
    gap: 24px;
    flex: 1 0 0;
}

.about-text-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
}

.about-topics {
    display: flex;
    align-items: flex-start;
    gap: 10px;
    align-self: stretch;
}

.topics-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
    flex: 1 0 0;
}

.topics-wrapper li {
    list-style-type: circle;
}

.skills-container {
    display: flex;
    padding: 0 32px;
    flex-direction: column;
    align-items: center;
    gap: 48px;
}

.skills-title {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.skills-wrapper {
    display: flex;
    width: 100%;
    justify-content: space-evenly;
    gap: 48px;
    flex-wrap: wrap;
}

.skill {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.skill > img {
    width: 64px;
    height: 64px;
}

.projects {
    background: var(--Gray-50, #F9FAFB);
}

.projects-container {
    display: flex;
    padding: 0 32px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 48px;
}

.projects-title {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.project {
    display: flex;
    width: 115rem;

    border-radius: 12px;
    background: var(--Gray-Default, #FFF);

    transition: all 0.2s ease-in-out;
    box-shadow: 0 4px 3px 0 rgba(0, 0, 0, 0.07), 0 2px 2px 0 rgba(0, 0, 0, 0.06);
}

.project:hover {
    box-shadow: 0 16px 12px 0 rgba(0, 0, 0, 0.07), 0 8px 8px 0 rgba(0, 0, 0, 0.06);
    scale: 1.03;
}

.project-img {
    display: flex;
    padding: 48px;
    justify-content: center;
    align-items: center;
    flex: 1 0 0;

    border-radius: 12px 0 0 12px;
    border-right: 1px solid var(--Gray-100, #F3F4F6);
    background: var(--Gray-50, #F9FAFB);
}

.project-img img {
    border-radius: 12px;

    box-shadow: 0 4px 3px 0 rgba(0, 0, 0, 0.10), 0 10px 8px 0 rgba(0, 0, 0, 0.04);
}

.project-content {
    display: flex;
    padding: 48px;
    flex-direction: column;
    align-items: start;
    gap: 24px;
    flex: 1 0 0;

    border-radius: 12px 0 0 12px;
}

.title .subtitle {
    color: var(--Gray-900);
}

.project-content .tags {
    display: flex;
    align-items: center;
    align-content: center;
    gap: 8px;
}

.project-content .links a {
    padding: 6px;
}

.contact-container {
    display: flex;
    padding: 0 32px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 48px;
}

.contact-title {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.contact-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 16px;
}

.email {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.contact-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 16px;
}

@media (max-width: 1200px) {
    .project {
        flex-direction: column;
        width: 95%;
    }

    .project-img {
        padding: calc(1vw + 22px);
    }
}

